Completed the imports

--- a/assignment_kmc.ipynb
+++ b/assignment_kmc.ipynb
@@ -33,6 +33,131 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Load the airbnb_hw.csv data. Clean Price along with Beds, Number of Reviews, and Review Scores Rating."
+      ],
+      "metadata": {
+        "id": "LnjnzhOJ-q8s"
+      },
+      "id": "LnjnzhOJ-q8s"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "1N1KelVL--MV"
+      },
+      "id": "1N1KelVL--MV",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Maxmin normalize the data and remove any nan's (KMeans from sklearn doesn't accept nan input)."
+      ],
+      "metadata": {
+        "id": "ZwX0EDUL-_p1"
+      },
+      "id": "ZwX0EDUL-_p1"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QBdpiWAC_AMJ"
+      },
+      "id": "QBdpiWAC_AMJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Use sklearn's KMeans module to cluster the data by Beds, Number of Reviews, and Review Scores Rating for k=6."
+      ],
+      "metadata": {
+        "id": "fLS33dP5_Aph"
+      },
+      "id": "fLS33dP5_Aph"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6JcroJp1_A0H"
+      },
+      "id": "6JcroJp1_A0H",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Use seaborn's .pairplot() to make a grid of scatterplots that show how the clustering is carried out in multiple dimensions."
+      ],
+      "metadata": {
+        "id": "ISjI8FEw_BE_"
+      },
+      "id": "ISjI8FEw_BE_"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PcxmvyIt_BMM"
+      },
+      "id": "PcxmvyIt_BMM",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Use .groupby and .describe to compute the average price for each cluster. Which clusters have the highest rental prices?"
+      ],
+      "metadata": {
+        "id": "pcFds4Ia_QSE"
+      },
+      "id": "pcFds4Ia_QSE"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tK1b0iv3_Qco"
+      },
+      "id": "tK1b0iv3_Qco",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Use a scree plot to pick the number of clusters and repeat steps 4 and 5."
+      ],
+      "metadata": {
+        "id": "zZDQGkIX_Qqb"
+      },
+      "id": "zZDQGkIX_Qqb"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sP5XJ0HN_Q4f"
+      },
+      "id": "sP5XJ0HN_Q4f",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "id": "26523935-9e8f-4377-920c-6f65605c0e31",
       "metadata": {
         "id": "26523935-9e8f-4377-920c-6f65605c0e31"
